[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/caravan/screens/depot_browser.gd" id="1_depot_browser"]

[node name="DepotBrowser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_depot_browser")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="FilterRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="FilterLabel" type="Label" parent="VBoxContainer/FilterRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Filter: All (L/R)"

[node name="Spacer" type="Control" parent="VBoxContainer/FilterRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SortLabel" type="Label" parent="VBoxContainer/FilterRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Sort: --"

[node name="ItemCountLabel" type="Label" parent="VBoxContainer/FilterRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "0 items"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ContentRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="ItemScroll" type="ScrollContainer" parent="VBoxContainer/ContentRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="ItemGrid" type="GridContainer" parent="VBoxContainer/ContentRow/ItemScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 4

[node name="DetailsPanel" type="VBoxContainer" parent="VBoxContainer/ContentRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="ItemNameLabel" type="Label" parent="VBoxContainer/ContentRow/DetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.8, 0.8, 0.2, 1)
text = "ITEM NAME"

[node name="ItemDescLabel" type="Label" parent="VBoxContainer/ContentRow/DetailsPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
text = "Item description goes here..."
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TakeButton" type="Button" parent="VBoxContainer/ButtonRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 24
text = "TAKE"

[node name="Spacer" type="Control" parent="VBoxContainer/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/font_size = 24
text = "BACK"
